# bitfield-algebra

./: LICENSE  README.md  bit_algebra.py  bit_algebra_test.py  bitvector.py  bitvector_test.py  pyproject.toml
