[tool.poetry]
name = "bit-algebra"
version = "0.1.0"
description = "Symbolic algebra over bitfields."
authors = ["Hugh Wimberly <hugh.wimberly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
pytest-black = "^0.3.8"
hypothesis = "^5.5.4"
pylint = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
